infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strike
  labels:
    name: strike
    environment: production
